--- a/src/index.scss
+++ b/src/index.scss
@@ -33,11 +33,11 @@ body {
 	font-size: var(--font-size);
 	font-weight: 500;
 	line-height: 150%;
-	padding: 0 5%;
+	padding: 0 5% 5% 5%;
 
 	color: var(--color-primary);
 
-	height: 100vh;
+	min-height: 100vh;
 }
 
 .icon-attribute {
